fix: adjust spacing in second section and update margin in list container for better layout

--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -2,7 +2,7 @@
     .second-section {
             .second-inner {
                 display: flex;
-                gap: 12em;
+                gap: 10em;
             }
         }
     
@@ -45,7 +45,7 @@
             }
     
             .list-container {
-                margin-top: 10em;
+                margin-top: 2em;
     
                 li {
                     display: flex;
